--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,8 @@ dependencies:
     sdk: flutter
   simple_splashscreen: "^0.1.3"
   mysql1: ^0.17.1
-  url_launcher: ^5.0.3
+  url_launcher: ^5.5.2
+  path_provider: ^1.6.14
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
